# Grebe

./: .gitignore  Cargo.toml  GrebeDiagram.drawio  LICENSE  README.md  build.rs  config.toml  default_config.toml
hardware/ControllerSketch/: ControllerSketch.ino  DIY_TFT_Display.cpp  DIY_TFT_Display.h  encoders.cpp  encoders.h
hardware/ESP32_DEVKITV1/: DIY_TFT_Display.cpp  DIY_TFT_Display.h  ESP32_DEVKITV1.ino  encoders.cpp
src/: audio.rs  config.rs  default_config.toml  main.rs  notify.rs  old.rs  serial.rs
