[package]
name = "Grebe"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.10"
viuer = "0.11.0"
windows = { version = "0.56", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
]}

