[package]
name = "Grebe"
version = "0.1.2"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5.16"
env_logger = "0.11.11"
image = "0.25.10"
log = "0.4.33"
serde = { version = "1.0.228", features = ["derive"] }
serialport = "4.9.0"
toml = "1.1.2"
tray-icon = "0.24.1"
viuer = "0.11.0"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",

]}
windows-core = "0.58"
winit = "0.30.13"

