[package]
name = "Grebe"
version = "0.2.1"
edition = "2024"

[package.metadata.winres]
OriginalFilename = "Grebe.exe"
LegalCopyright = "Copyright © 2026"

[dependencies]
crossbeam-channel = "0.5.16"
env_logger = "0.11.11"
image = "0.25.10"
log = "0.4.33"
mslnk = "0.1.8"
serde = { version = "1.0.228", features = ["derive"] }
serialport = "4.9.0"
toml = "1.1.2"
tray-icon = "0.24.1"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "UI_Notifications",
    "Data_Xml_Dom",
    "Win32_Storage_EnhancedStorage",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Storage_FileSystem"

]}
windows-core = "0.58"
winit = "0.30.13"

[build-dependencies]
winres = "0.1.12"

[profile.release]
strip = true
lto = true
codegen-units = 1 # Single thread optimization
panic = "abort" # Don't unwind the stack, just kill everything
opt-level = "s"
